picture and updates

--- a/public/chris.html
+++ b/public/chris.html
@@ -42,7 +42,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="chris.html">Chris Robertson</a>
+          <a class="navbar-brand" href="index.html">Chris Robertson</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -56,9 +56,7 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Hello.</h1>
-        <p class="lead">My name is Chris Robertson and I am a Developer and DevOps Engineer!</p>
-        <img src="images/node.svg" width="500">
+        <img src="images/electronicsleep-trukee.jpg" width="500">
       </div>
 
     </div><!-- /.container -->
