forever/bootstrap changes

--- a/public/about.html
+++ b/public/about.html
@@ -53,58 +53,57 @@
 
     <div class="container">
 
-      <div class="starter-template">
-        <h1>Hello.</h1>
-         <p class="lead"> I enjoy music, programming, taking photographs, making websites and art, usually digital but getting back into sketching and painting. I collect vintage synths and make music as Electronic Sleep. I started making music with a bass guitar and a drum machine around 1996. 
+     <div class="starter-template">
+     <h1>About.</h1>
+     <p class="lead"> I enjoy music, programming, taking photographs, making websites and art, usually digital but getting back into sketching and painting. I collect vintage synths and make music as Electronic Sleep. I started making music with a bass guitar and a drum machine around 1996.
 
-         <p class="lead">Got started with programming computers by making websites around 1998 for my music projects. I enjoyed it because I thought of it as a artistic medium like painting or drawing. You have a blank canvas with the web, graphics and code and you can create anything and educate yourself, this I found inspiring and fun. 
+     <p class="lead">Got started with programming computers by making websites around 1998 for my music projects. I enjoyed it because I thought of it as a artistic medium like painting or drawing. You have a blank canvas with the web, graphics and code and you can create anything and educate yourself, this I found inspiring and fun. Then I moved to learning how my code runs on the server.
 
-				 <h2>Music/Art Projects</h2>
+     <h2>Music/Art Projects</h2>
 
-				 <p><a href="http://electronicsleep.com" target="_blank">Electronic Sleep</a>
-				 <p><a href="https://www.youtube.com/watch?v=72_e-N6xUMI&t=6s" target="_blank">Recent Video</a>
-				 <p><a href="https://www.soundcloud.com/electronicsleep" target="_blank">SoundCloud</a>
-				 <p><a href="https://electronicsleep.bandcamp.com/" target="_blank">BandCamp</a>
+     <p><a href="http://electronicsleep.com" class="btn btn-info" target="_blank">Electronic Sleep</a>
+     <p><a href="https://www.youtube.com/watch?v=72_e-N6xUMI&t=6s" class="btn btn-info" target="_blank">Recent Video</a>
+     <p><a href="https://www.soundcloud.com/electronicsleep" class="btn btn-info" target="_blank">SoundCloud</a>
+     <p><a href="https://electronicsleep.bandcamp.com/" class="btn btn-info" target="_blank">BandCamp</a>
 
-				 <h2>Programming Projects</h2>
+     <h2>Programming Projects</h2>
 
-				 <p><a href="https://github.com/electronicsleep" target="_blank">Github</a>
-				 <p><a href="http://yourideaspace.com" target="_blank">Your Idea Space</a>
-				 <p><a href="https://www.linkedin.com/in/electronicsleep" target="_blank">LinkedIn</a>
+     <p><a href="https://github.com/electronicsleep" class="btn btn-info" target="_blank">Github</a>
+     <p><a href="http://yourideaspace.com" class="btn btn-info" target="_blank">Your Idea Space</a>
+     <p><a href="https://www.linkedin.com/in/electronicsleep" class="btn btn-info" target="_blank">LinkedIn</a>
 
-				 <h2>Interests</h2>
+     <h2>Interests</h2>
 
-				 <p><a href="https://ardour.org" target="_blank">Ardour</a>
-				 <p><a href="http://www.ladyada.net/make/x0xb0x/" target="_blank">x0xb0x</a>
-				 <p><a href="https://www.propellerheads.se/en/reason" target="_blank">Reason</a>
-				 <p><a href="http://www.nvidia.com" target="_blank">Nvidia</a>
-				 <p><a href="http://www.apple.com" target="_blank">Apple</a>
-				 <p><a href="http://www.apple.com/final-cut-pro" target="_blank">Final Cut</a>
-				 <p><a href="http://www.apple.com/logic-pro" target="_blank">Logic Pro</a>
-				 <p><a href="http://www.debian.org/" target="_blank">Debian</a>
-				 <p><a href="https://xfce.org" target="_blank">Xfce</a>
-				 <p><a href="https://en.wikipedia.org/wiki/Vim_(text_editor)" target="_blank">Vim</a>
-				 <p><a href="https://en.wikipedia.org/wiki/Unix" target="_blank">Unix</a>
-				 <p><a href="https://www.jetbrains.com/pycharm" target="_blank">PyCharm</a>
-				 <p><a href="https://www.sublimetext.com" target="_blank">SublimeText</a>
+     <p><a href="https://ardour.org" class="btn btn-info" target="_blank">Ardour</a>
+     <p><a href="http://www.ladyada.net/make/x0xb0x/" class="btn btn-info" target="_blank">x0xb0x</a>
+     <p><a href="https://www.propellerheads.se/en/reason" class="btn btn-info" target="_blank">Reason</a>
+     <p><a href="http://www.nvidia.com" class="btn btn-info" target="_blank">Nvidia</a>
+     <p><a href="http://www.apple.com" class="btn btn-info" target="_blank">Apple</a>
+     <p><a href="http://www.apple.com/final-cut-pro" class="btn btn-info" target="_blank">Final Cut</a>
+     <p><a href="http://www.apple.com/logic-pro" class="btn btn-info" target="_blank">Logic Pro</a>
+     <p><a href="http://www.debian.org/" class="btn btn-info" target="_blank">Debian</a>
+     <p><a href="https://xfce.org" class="btn btn-info" target="_blank">Xfce</a>
+     <p><a href="https://en.wikipedia.org/wiki/Vim_(text_editor)" class="btn btn-info" target="_blank">Vim</a>
+     <p><a href="https://en.wikipedia.org/wiki/Unix" class="btn btn-info" target="_blank">Unix</a>
+     <p><a href="https://www.jetbrains.com/pycharm" class="btn btn-info" target="_blank">PyCharm</a>
+     <p><a href="https://www.sublimetext.com" class="btn btn-info" target="_blank">SublimeText</a>
 
-				 <h2>Debian GNU/Linux Tower</h2>
+     <h2>Debian GNU/Linux Tower</h2>
 
-				 <p class="lead">In 2016 I built a Debian GNU Linux desktop computer for audio recording, games and 3d graphics:
-				 <p>These are the parts I used, everything works with Linux.
+     <p class="lead">In 2016 I built a Debian GNU Linux desktop computer for audio recording, games and 3D graphics:
+     <p><b>These are the parts I used, everything works with Linux.</b>
 
+     <p>M-Audio Delta PCI (DELTA 1010LT) Sound Card
+     <p>Intel Core BX80646I74790K i7-4790K Processor (8M Cache, up to 4.40 GHz)
+     <p>ASUS ATX DDR3 2600 LGA 1150 Motherboards Z97-A/USB 3.1
+     <p>Asus GeForce GTX 950 2GB 128-Bit GDDR5 Graphics Cards (STRIX-GTX950-DC2OC-2GD5-GAMING)
+     <p>PCI 300Mbps 300M 802.11b/g/n Wireless WiFi Card Adapter for Desktop PC Laptop
+     <p>Asus 24x DVD-RW Serial-ATA Internal OEM Optical Drive DRW-24B1ST (Black)
+     <p>Corsair Carbide Series 100R Silent Edition Quiet Mid Tower Case
+     <p>Kingston HyperX FURY 16GB Kit (2x8GB) 1866MHz DDR3 CL10 DIMM - Black (HX318C10FBK2/16)
+     <p>EVGA 700 B1, 80+ BRONZE 700W, Power Supply 100-B1-0700-K1
 
-				 <p>M-Audio Delta PCI (DELTA 1010LT) Sound Card
-				 <p>Intel Core BX80646I74790K i7-4790K Processor (8M Cache, up to 4.40 GHz)
-				 <p>ASUS ATX DDR3 2600 LGA 1150 Motherboards Z97-A/USB 3.1
-				 <p>Asus GeForce GTX 950 2GB 128-Bit GDDR5 Graphics Cards (STRIX-GTX950-DC2OC-2GD5-GAMING)
-				 <p>PCI 300Mbps 300M 802.11b/g/n Wireless WiFi Card Adapter for Desktop PC Laptop
-				 <p>Asus 24x DVD-RW Serial-ATA Internal OEM Optical Drive DRW-24B1ST (Black)
-				 <p>Corsair Carbide Series 100R Silent Edition Quiet Mid Tower Case
-				 <p>Kingston HyperX FURY 16GB Kit (2x8GB) 1866MHz DDR3 CL10 DIMM - Black (HX318C10FBK2/16)
-				 <p>EVGA 700 B1, 80+ BRONZE 700W, Power Supply 100-B1-0700-K1
-
-      </div>
+     </div>
 
     </div><!-- /.container -->
 
