--- a/public/about.html
+++ b/public/about.html
@@ -57,7 +57,7 @@
      <h1>About.</h1>
      <p class="lead"> I enjoy music, programming, taking photographs, making websites and art, usually digital but getting back into sketching and painting. I collect vintage synths and make music as Electronic Sleep. I started making music with a bass guitar and a drum machine around 1996.
 
-     <p class="lead">Got started with programming computers by making websites around 1998 for my music projects. I enjoyed it because I thought of it as a artistic medium like painting or drawing. You have a blank canvas with the web, graphics and code and you can create anything and educate yourself, this I found inspiring and fun. Then I moved to learning how my code runs on the server.
+     <p class="lead">Got started with programming computers by making websites around 1998 for my music projects. I enjoyed it because I thought of it as a artistic medium like painting or drawing. You have a blank canvas with the web, graphics and code and you can create anything and educate yourself, this I found inspiring and fun. I also enjoyed learning how my code runs on the server!
 
      <h2>Music/Art Projects</h2>
 
