--- a/public/about.html
+++ b/public/about.html
@@ -7,7 +7,7 @@
 
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
 
     <title>Chris Robertson</title>
 
@@ -54,30 +54,30 @@
     <div class="container">
 
      <div class="starter-template">
-     <h1>About.</h1>
-     <p class="lead"> I enjoy music, programming, taking photographs, making websites and art, usually digital but getting back into sketching and painting. I collect vintage synths and make music as Electronic Sleep. I started making music with a bass guitar and a drum machine around 1996.
+     <h1>About:</h1>
+     <p class="lead"> I create music, program and take photographs, and also make websites and art, usually digital but getting back into sketching and painting. I collect vintage synths and make music as Electronic Sleep. I started making music with a bass guitar and a drum machine around 1996.
 
-     <p class="lead">Got started with programming computers by making websites around 1998 for my music projects. I enjoyed it because I thought of it as a artistic medium like painting or drawing. You have a blank canvas with the web, graphics and code and you can create anything and educate yourself, this I found inspiring and fun. I also enjoyed learning how my code runs on the server!
-
-     <h2>Music/Art Projects</h2>
+     <p class="lead">Started with programming computers by making websites around 1998 for my music projects and never stopped learning. I enjoyed it because I thought of it as a artistic medium.
+     <h2>Music/Art Projects:</h2>
 
      <p><a href="http://electronicsleep.com" class="btn btn-info" target="_blank">Electronic Sleep</a>
      <p><a href="https://www.youtube.com/watch?v=72_e-N6xUMI&t=6s" class="btn btn-info" target="_blank">Recent Video</a>
      <p><a href="https://www.soundcloud.com/electronicsleep" class="btn btn-info" target="_blank">SoundCloud</a>
      <p><a href="https://electronicsleep.bandcamp.com/" class="btn btn-info" target="_blank">BandCamp</a>
 
-     <h2>Programming Projects</h2>
+     <h2>Programming Projects:</h2>
 
      <p><a href="https://github.com/electronicsleep" class="btn btn-info" target="_blank">Github</a>
      <p><a href="http://yourideaspace.com" class="btn btn-info" target="_blank">Your Idea Space</a>
      <p><a href="https://www.linkedin.com/in/electronicsleep" class="btn btn-info" target="_blank">LinkedIn</a>
 
-     <h2>Interests</h2>
+     <h2>Interests:</h2>
 
      <p><a href="https://ardour.org" class="btn btn-info" target="_blank">Ardour</a>
      <p><a href="http://www.ladyada.net/make/x0xb0x/" class="btn btn-info" target="_blank">x0xb0x</a>
      <p><a href="https://www.propellerheads.se/en/reason" class="btn btn-info" target="_blank">Reason</a>
      <p><a href="http://www.nvidia.com" class="btn btn-info" target="_blank">Nvidia</a>
+     <p><a href="https://www.roku.com" class="btn btn-info" target="_blank">Roku</a>
      <p><a href="http://www.apple.com" class="btn btn-info" target="_blank">Apple</a>
      <p><a href="http://www.apple.com/final-cut-pro" class="btn btn-info" target="_blank">Final Cut</a>
      <p><a href="http://www.apple.com/logic-pro" class="btn btn-info" target="_blank">Logic Pro</a>
@@ -88,9 +88,9 @@
      <p><a href="https://www.jetbrains.com/pycharm" class="btn btn-info" target="_blank">PyCharm</a>
      <p><a href="https://www.sublimetext.com" class="btn btn-info" target="_blank">SublimeText</a>
 
-     <h2>Debian GNU/Linux Tower</h2>
+     <h2>Debian GNU/Linux Tower:</h2>
 
-     <p class="lead">In 2016 I built a Debian GNU Linux desktop computer for audio recording, games and 3D graphics:
+     <p class="lead">In 2016 I built a Debian/GNU Linux desktop computer for audio recording, games and 3D graphics:
      <p><b>These are the parts I used, everything works with Linux.</b>
 
      <p>M-Audio Delta PCI (DELTA 1010LT) Sound Card
