--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
 
     <title>Chris Robertson</title>
 
@@ -56,7 +56,7 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Hello.</h1>
+        <h1>Home:</h1>
         <p class="lead">My name is Chris Robertson and I am a Developer and DevOps Engineer!</p>
         <img src="images/node.svg" width="500">
       </div>
