--- a/public/about.html
+++ b/public/about.html
@@ -73,6 +73,11 @@
 
      <h2>Interests:</h2>
 
+     <p><a href="http://www.kernel.org" class="btn btn-info" target="_blank">Linux</a>
+     <p><a href="http://www.debian.org" class="btn btn-info" target="_blank">Debian</a>
+     <p><a href="https://xfce.org" class="btn btn-info" target="_blank">Xfce</a>
+     <p><a href="https://en.wikipedia.org/wiki/Unix" class="btn btn-info" target="_blank">Unix</a>
+     <p><a href="https://en.wikipedia.org/wiki/Vim_(text_editor)" class="btn btn-info" target="_blank">Vim</a>
      <p><a href="https://ardour.org" class="btn btn-info" target="_blank">Ardour</a>
      <p><a href="http://www.ladyada.net/make/x0xb0x/" class="btn btn-info" target="_blank">x0xb0x</a>
      <p><a href="https://www.propellerheads.se/en/reason" class="btn btn-info" target="_blank">Reason</a>
@@ -81,10 +86,6 @@
      <p><a href="http://www.apple.com" class="btn btn-info" target="_blank">Apple</a>
      <p><a href="http://www.apple.com/final-cut-pro" class="btn btn-info" target="_blank">Final Cut</a>
      <p><a href="http://www.apple.com/logic-pro" class="btn btn-info" target="_blank">Logic Pro</a>
-     <p><a href="http://www.debian.org/" class="btn btn-info" target="_blank">Debian</a>
-     <p><a href="https://xfce.org" class="btn btn-info" target="_blank">Xfce</a>
-     <p><a href="https://en.wikipedia.org/wiki/Vim_(text_editor)" class="btn btn-info" target="_blank">Vim</a>
-     <p><a href="https://en.wikipedia.org/wiki/Unix" class="btn btn-info" target="_blank">Unix</a>
      <p><a href="https://www.jetbrains.com/pycharm" class="btn btn-info" target="_blank">PyCharm</a>
      <p><a href="https://www.sublimetext.com" class="btn btn-info" target="_blank">SublimeText</a>
 
