--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
       <div class="starter-template">
         <h1>Home:</h1>
         <p class="lead">My name is Chris Robertson and I am a Developer and DevOps Engineer!</p>
-        <img src="images/node.svg" width="500">
+        <img src="images/250px-Tux.png" width="240">
       </div>
 
     </div><!-- /.container -->
