--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li class="active"><a href="index.html">Hello.</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
