--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Hello.</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -55,7 +55,7 @@
     <div class="container">
 
       <div class="starter-template">
-       <h1>Home:</h1>
+       <h1>Hello:</h1>
 
        <p class="lead"> I create music, program and take photographs, and also make websites and art, usually digital but getting back into sketching and painting. I collect vintage synths and make music as Electronic Sleep. I started making music with a bass guitar and a drum machine around 1996.
 
