--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
     <div class="container">
 
       <div class="starter-template">
-       <h1>Hello:</h1>
+       <h1>Hello.</h1>
 
        <p class="lead"> I create music, program and take photographs, and also make websites and art, usually digital but getting back into sketching and painting. I collect vintage synths and make music as Electronic Sleep. I started making music with a bass guitar and a drum machine around 1996.
 
