small updates to content

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="images/favicon.ico">
@@ -57,9 +57,10 @@
       <div class="starter-template">
        <h1>Hello.</h1>
 
-       <p class="lead"> I create music, program and take photographs, and also make websites and art, usually digital but getting back into sketching and painting. I collect vintage synths and make music as Electronic Sleep. I started making music with a bass guitar and a drum machine around 1996.
+       <p class="lead"> I create music, program and take photographs, and also make websites and art. I collect vintage synths and make music as Electronic Sleep. I started making music with a bass guitar and a drum machine around 1996.
 
-       <p class="lead">Started with programming computers by making websites around 1998 for my music projects and never stopped learning. I enjoyed it because I thought of it as a artistic medium.
+       <p class="lead">Started with programming computers by making websites and programs around 1998 for my music projects and never stopped learning.
+
        <h2>Music/Art Projects:</h2>
 
        <p><a href="http://electronicsleep.com" class="btn btn-info" target="_blank">Electronic Sleep</a>
