small updates to content

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
       <div class="starter-template">
        <h1>Hello.</h1>
 
-       <p class="lead"> I create music, program and take photographs, and also make websites and art. I collect vintage synths and make music as Electronic Sleep. I started making music with a bass guitar and a drum machine around 1996.
+       <p class="lead"> I create music, program, take photographs and make websites and art. I collect vintage synths and make music as Electronic Sleep. I started making music with a bass guitar and a drum machine around 1996.
 
        <p class="lead">Started with programming computers by making websites and programs around 1998 for my music projects and never stopped learning.
 
