--- a/public/index.html
+++ b/public/index.html
@@ -87,11 +87,11 @@
        <p><a href="https://www.propellerheads.se/en/reason" class="btn btn-info" target="_blank">Reason</a>
        <p><a href="http://www.nvidia.com" class="btn btn-info" target="_blank">Nvidia</a>
        <p><a href="https://www.roku.com" class="btn btn-info" target="_blank">Roku</a>
-       <p><a href="http://www.apple.com" class="btn btn-info" target="_blank">Apple</a>
        <p><a href="http://www.apple.com/final-cut-pro" class="btn btn-info" target="_blank">Final Cut</a>
        <p><a href="http://www.apple.com/logic-pro" class="btn btn-info" target="_blank">Logic Pro</a>
        <p><a href="https://www.jetbrains.com/pycharm" class="btn btn-info" target="_blank">PyCharm</a>
        <p><a href="https://www.sublimetext.com" class="btn btn-info" target="_blank">SublimeText</a>
+       <p><a href="https://www.gnu.org/philosophy/free-sw.en.html" class="btn btn-info" target="_blank">Software Freedom</a>
 
        <h2>Debian GNU/Linux Tower:</h2>
 
