--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,8 @@
 
       <div class="starter-template">
 
+       <h1>Hello.</h1>
+
        <p class="lead"> I create music, program, take photographs and make websites and art. I collect vintage synths and make music as Electronic Sleep. I started making music with a bass guitar and a drum machine around 1996.
 
        <p class="lead">Started programming computers by making websites and programs around 1998 for my music projects and never stopped learning.
@@ -84,7 +86,7 @@
        <p><a href="https://ardour.org" class="btn btn-info" target="_blank">Ardour</a>
        <p><a href="http://www.ladyada.net/make/x0xb0x/" class="btn btn-info" target="_blank">x0xb0x</a>
        <p><a href="http://www.nvidia.com" class="btn btn-info" target="_blank">Nvidia</a>
-       <p><a href="https://www.unrealengine.com" class="btn btn-info" target="_blank">Unreal Engine</a>
+       <p><a href="https://www.unrealengine.com" class="btn btn-info" target="_blank">Unreal</a>
        <p><a href="https://www.roku.com" class="btn btn-info" target="_blank">Roku</a>
        <p><a href="https://www.propellerheads.se/en/reason" class="btn btn-info" target="_blank">Reason</a>
        <p><a href="http://www.apple.com/final-cut-pro" class="btn btn-info" target="_blank">Final Cut</a>
