--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,7 @@
        <p><a href="http://www.apple.com/logic-pro" class="btn btn-info" target="_blank">Logic Pro</a>
        <p><a href="https://www.jetbrains.com/pycharm" class="btn btn-info" target="_blank">PyCharm</a>
        <p><a href="https://www.sublimetext.com" class="btn btn-info" target="_blank">SublimeText</a>
+       <p><a href="https://opensource.org" class="btn btn-info" target="_blank">Open Source</a>
        <p><a href="https://www.gnu.org/philosophy/free-sw.en.html" class="btn btn-info" target="_blank">Software Freedom</a>
 
        <h2>Debian GNU/Linux Tower:</h2>
