Updates to content

--- a/public/apple.html
+++ b/public/apple.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="images/favicon.ico">
@@ -48,7 +48,7 @@
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
             <li><a href="/linux.html">Linux</a></li>
-            <li><a href="/apple.html">Apple</a></li>
+            <li class="active"><a href="/apple.html">Apple</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -57,7 +57,24 @@
     <div class="container">
 
       <div class="starter-template">
-        <img src="images/electronicsleep-trukee.jpg" width="350">
+
+       <h1>Apple.</h1>
+
+       <p class="lead">Started working on the Apple platform after they adopted the BSD UNIX core for MacOS. I have been learning more about Objective C and Swift.
+
+       <p class="lead">When I was a kid I remember using an Apple ][ and playing Oregon Trail and I remember one of my moms friend had a classic mac. 
+
+       <p class="lead">The music program called Reason is one of the Mac applications I still use today, I have written many songs with this software.
+
+       <p class="lead">I was a holdout for the iPad but once I saw what you can do with the device in regards to music I was happy to try it. Now I use the ipad for a sequencer and soft synths.
+
+       <p class="lead">Once I moved to the SF Bay Area I also had the chance to work at Apple on the iCloud team after being a contractor for some time.
+
+       <p class="lead">Currently working on an iOS app for a project I have called M3cho, which is a music platform and plan on doing more music and education software with the platform.
+
+       <div style="clear:both;"></div>
+
+       <img src="images/Apple-Logo-rainbow.png" width="240">
       </div>
 
     </div><!-- /.container -->
