--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,8 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
+            <li><a href="/linux.html">Linux</a></li>
+            <li><a href="/apple.html">Apple</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -72,13 +74,13 @@
        <h2>Programming Projects:</h2>
 
        <p><a href="https://github.com/electronicsleep" class="btn btn-info" target="_blank">Github</a>
-       <p><a href="http://yourideaspace.com" class="btn btn-info" target="_blank">Your Idea Space</a>
+       <p><a href="https://yourideaspace.com" class="btn btn-info" target="_blank">Your Idea Space</a>
        <p><a href="https://www.linkedin.com/in/electronicsleep" class="btn btn-info" target="_blank">LinkedIn</a>
 
        <h2>Interests:</h2>
 
-       <p><a href="http://www.kernel.org" class="btn btn-info" target="_blank">Linux</a>
-       <p><a href="http://www.debian.org" class="btn btn-info" target="_blank">Debian</a>
+       <p><a href="https://www.kernel.org" class="btn btn-info" target="_blank">Linux</a>
+       <p><a href="https://www.debian.org" class="btn btn-info" target="_blank">Debian</a>
        <p><a href="https://gnome.org" class="btn btn-info" target="_blank">Gnome</a>
        <p><a href="https://xfce.org" class="btn btn-info" target="_blank">Xfce</a>
        <p><a href="https://en.wikipedia.org/wiki/Unix" class="btn btn-info" target="_blank">Unix</a>
@@ -86,34 +88,17 @@
        <p><a href="https://ardour.org" class="btn btn-info" target="_blank">Ardour</a>
        <p><a href="http://www.ladyada.net/make/x0xb0x/" class="btn btn-info" target="_blank">x0xb0x</a>
        <p><a href="http://www.nvidia.com" class="btn btn-info" target="_blank">Nvidia</a>
+       <p><a href="https://www.blender.org" class="btn btn-info" target="_blank">Blender</a>
        <p><a href="https://www.unrealengine.com" class="btn btn-info" target="_blank">Unreal</a>
        <p><a href="https://www.roku.com" class="btn btn-info" target="_blank">Roku</a>
+       <p><a href="https://developer.apple.com/opensource/" class="btn btn-info" target="_blank">Apple</a>
        <p><a href="https://www.propellerheads.se/en/reason" class="btn btn-info" target="_blank">Reason</a>
-       <p><a href="http://www.apple.com/final-cut-pro" class="btn btn-info" target="_blank">Final Cut</a>
-       <p><a href="http://www.apple.com/logic-pro" class="btn btn-info" target="_blank">Logic Pro</a>
+       <p><a href="https://www.apple.com/final-cut-pro" class="btn btn-info" target="_blank">Final Cut</a>
+       <p><a href="https://www.apple.com/logic-pro" class="btn btn-info" target="_blank">Logic Pro</a>
        <p><a href="https://www.jetbrains.com/pycharm" class="btn btn-info" target="_blank">PyCharm</a>
        <p><a href="https://www.sublimetext.com" class="btn btn-info" target="_blank">SublimeText</a>
        <p><a href="https://opensource.org" class="btn btn-info" target="_blank">Open Source</a>
        <p><a href="https://www.gnu.org/philosophy/free-sw.en.html" class="btn btn-info" target="_blank">Software Freedom</a>
-
-       <h2>Debian GNU/Linux Tower:</h2>
-
-       <p class="lead">In 2016 I built a Debian/GNU Linux desktop computer for audio recording, games and 3D graphics:
-       <p><b>These are the parts I used, everything works with Linux.</b>
-
-       <p>M-Audio Delta PCI (DELTA 1010LT) Sound Card
-       <p>Intel Core BX80646I74790K i7-4790K Processor (8M Cache, up to 4.40 GHz)
-       <p>ASUS ATX DDR3 2600 LGA 1150 Motherboards Z97-A/USB 3.1
-       <p>Asus GeForce GTX 950 2GB 128-Bit GDDR5 Graphics Cards (STRIX-GTX950-DC2OC-2GD5-GAMING)
-       <p>PCI 300Mbps 300M 802.11b/g/n Wireless WiFi Card Adapter for Desktop PC Laptop
-       <p>Asus 24x DVD-RW Serial-ATA Internal OEM Optical Drive DRW-24B1ST (Black)
-       <p>Corsair Carbide Series 100R Silent Edition Quiet Mid Tower Case
-       <p>Kingston HyperX FURY 16GB Kit (2x8GB) 1866MHz DDR3 CL10 DIMM - Black (HX318C10FBK2/16)
-       <p>EVGA 700 B1, 80+ BRONZE 700W, Power Supply 100-B1-0700-K1
-
-       <div style="clear:both;"></div>
-
-       <img src="images/240px-Tux.png" width="240">
       </div>
 
     </div><!-- /.container -->
