--- a/public/linux.html
+++ b/public/linux.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="images/favicon.ico">
@@ -47,7 +47,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
-            <li><a href="/linux.html">Linux</a></li>
+            <li class="active"><a href="/linux.html">Linux</a></li>
             <li><a href="/apple.html">Apple</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -57,7 +57,33 @@
     <div class="container">
 
       <div class="starter-template">
-        <img src="images/electronicsleep-trukee.jpg" width="350">
+
+       <h1>Linux.</h1>
+
+       <p class="lead">I would say my favorite thing about Linux is programming on the platform. Recently I have been learning graphics with SDL2/OpenGL and different graphics under Linux.
+
+       <p class="lead">Mainly I use Debian and sometimes Ubuntu also CentOS is also very nice and stable rpm based distro.
+
+       <p class="lead">Recent programming languages: Python, Java, PHP, Node.js, Perl, Bash, C++.
+
+       <h2>Debian GNU/Linux Tower:</h2>
+
+       <p class="lead">In 2016 I built a Debian/GNU Linux desktop computer for audio recording, games and 3D graphics:
+       <p><b>These are the parts I used, everything works with Linux.</b>
+
+       <p>M-Audio Delta PCI (DELTA 1010LT) Sound Card
+       <p>Intel Core BX80646I74790K i7-4790K Processor (8M Cache, up to 4.40 GHz)
+       <p>ASUS ATX DDR3 2600 LGA 1150 Motherboards Z97-A/USB 3.1
+       <p>Asus GeForce GTX 950 2GB 128-Bit GDDR5 Graphics Cards (STRIX-GTX950-DC2OC-2GD5-GAMING)
+       <p>PCI 300Mbps 300M 802.11b/g/n Wireless WiFi Card Adapter for Desktop PC Laptop
+       <p>Asus 24x DVD-RW Serial-ATA Internal OEM Optical Drive DRW-24B1ST (Black)
+       <p>Corsair Carbide Series 100R Silent Edition Quiet Mid Tower Case
+       <p>Kingston HyperX FURY 16GB Kit (2x8GB) 1866MHz DDR3 CL10 DIMM - Black (HX318C10FBK2/16)
+       <p>EVGA 700 B1, 80+ BRONZE 700W, Power Supply 100-B1-0700-K1
+
+       <div style="clear:both;"></div>
+
+       <img src="images/240px-Tux.png" width="240">
       </div>
 
     </div><!-- /.container -->
