--- a/public/chris.html
+++ b/public/chris.html
@@ -57,7 +57,7 @@
     <div class="container">
 
       <div class="starter-template">
-        <img src="images/electronicsleep-trukee.jpg" width="350">
+        <img src="images/electronicsleep-trukee.png" width="350">
       </div>
 
     </div><!-- /.container -->
