--- a/public/apple.html
+++ b/public/apple.html
@@ -62,11 +62,11 @@
 
        <p class="lead">Started working on the Apple platform after they adopted the BSD UNIX core for MacOS. I have been learning more about Objective C and Swift.
 
-       <p class="lead">When I was a kid I remember using an Apple ][ and playing Oregon Trail and I remember one of my moms friend had a classic mac. 
+       <p class="lead">When I was a kid I remember using an Apple ][ and playing Oregon Trail in school and I remember one of my moms friend had a classic mac. 
 
        <p class="lead">The music program called Reason is one of the Mac applications I still use today, I have written many songs with this software.
 
-       <p class="lead">I was a holdout for the iPad but once I saw what you can do with the device in regards to music I was happy to try it. Now I use the ipad for a sequencer and soft synths.
+       <p class="lead">I was a holdout for the iPad but once I saw what you can do with the device in regards to music I was happy to try it. Now I use the iPad for a sequencer and soft synths.
 
        <p class="lead">Once I moved to the SF Bay Area I also had the chance to work at Apple on the iCloud team after being a contractor for some time.
 
