--- a/public/chris.html
+++ b/public/chris.html
@@ -57,7 +57,9 @@
     <div class="container">
 
       <div class="starter-template">
+        <a href="http://www.electronicsleep.com" target="_blank">
         <img src="images/electronicsleep-trukee.png" width="350">
+        </a>
       </div>
 
     </div><!-- /.container -->
