--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
 
        <h2>Music/Art Projects:</h2>
 
-       <p><a href="http://electronicsleep.com" class="btn btn-info" target="_blank">Electronic Sleep</a>
+       <p><a href="http://www.electronicsleep.com" class="btn btn-info" target="_blank">Electronic Sleep</a>
        <p><a href="https://www.youtube.com/watch?v=72_e-N6xUMI&t=6s" class="btn btn-info" target="_blank">Recent Video</a>
        <p><a href="https://www.soundcloud.com/electronicsleep" class="btn btn-info" target="_blank">SoundCloud</a>
        <p><a href="https://electronicsleep.bandcamp.com/" class="btn btn-info" target="_blank">BandCamp</a>
