--- a/public/linux.html
+++ b/public/linux.html
@@ -66,10 +66,8 @@
 
        <p class="lead">Recent programming languages: Python, Java, PHP, Node.js, Perl, Bash, C++.
 
-       <h2>Debian GNU/Linux Tower:</h2>
-
        <p class="lead">In 2016 I built a Debian/GNU Linux desktop computer for audio recording, games and 3D graphics:
-       <p><b>These are the parts I used, everything works with Linux.</b>
+       <p>These are the parts I used, everything works with Linux.
 
        <p>M-Audio Delta PCI (DELTA 1010LT) Sound Card
        <p>Intel Core BX80646I74790K i7-4790K Processor (8M Cache, up to 4.40 GHz)
