--- a/public/chris.html
+++ b/public/chris.html
@@ -57,9 +57,15 @@
     <div class="container">
 
       <div class="starter-template">
+
+        <h1>Chris</h1>
+
         <a href="http://www.electronicsleep.com" target="_blank">
         <img src="images/electronicsleep-trukee.png" width="350">
         </a>
+
+        <p class="lead">Born in Arizona and moved to the SF Bay Area, a musician and software developer that enjoys learning about the creative side of computing.
+
       </div>
 
     </div><!-- /.container -->
