--- a/public/index.html
+++ b/public/index.html
@@ -58,11 +58,15 @@
 
       <div class="starter-template">
 
-       <h1>Hello.</h1>
+       <h1>Hello</h1>
+
+       <a href="http://www.electronicsleep.com" target="_blank">
+       <img src="images/electronicsleep.png" width="350">
+       </a>
 
        <p class="lead"> I create music, program, take photographs and make websites and art. I collect vintage synths and make music as Electronic Sleep. I started making music with a bass guitar and a drum machine around 1996.
 
-       <p class="lead">Started programming computers by making websites and programs around 1998 for my music projects and never stopped learning.
+       <p class="lead">Started programming computers by making websites and programs around 1998 for my music projects and never stopped learning. I would be interested in collaborating on some creative software.
 
        <h2>Music/Art Projects:</h2>
 
@@ -99,6 +103,7 @@
        <p><a href="https://www.sublimetext.com" class="btn btn-info" target="_blank">SublimeText</a>
        <p><a href="https://opensource.org" class="btn btn-info" target="_blank">Open Source</a>
        <p><a href="https://www.gnu.org/philosophy/free-sw.en.html" class="btn btn-info" target="_blank">Software Freedom</a>
+
       </div>
 
     </div><!-- /.container -->
