--- a/public/linux.html
+++ b/public/linux.html
@@ -58,15 +58,15 @@
 
       <div class="starter-template">
 
-       <h1>Linux.</h1>
+       <h1>Linux</h1>
 
-       <p class="lead">I would say my favorite thing about Linux is programming on the platform. Recently I have been learning graphics with SDL2/OpenGL and different graphics under Linux.
+       <img src="images/240px-Tux.png" width="240">
 
-       <p class="lead">Mainly I use Debian and sometimes Ubuntu also CentOS is also very nice and stable rpm based distro.
+       <p class="lead">I would say my favorite thing about Linux is programming on the platform. Recently I have been learning graphics with SDL2/OpenGL and different graphics under Linux. I graviated towards the platform due to the command line and the vast information about programming and knowledge available.
 
-       <p class="lead">Recent programming languages: Python, Java, PHP, Node.js, Perl, Bash, C++.
+       <p class="lead">I use Debian mostly and sometimes Ubuntu and CentOS due to the stablity of rpm based distro. I started off with slackware back in the day. Recent programming languages: Python, Java, PHP, Node.js, Perl, Bash, C++.
 
-       <p class="lead">In 2016 I built a Debian/GNU Linux desktop computer for audio recording, games and 3D graphics:
+       <p class="lead">In 2016 I built a affordable and powerful Debian/GNU Linux desktop computer for audio recording, games and 3D graphics, thought I would share my hardware info. Everything works well with Linux.
 
        <p>M-Audio Delta PCI (DELTA 1010LT) Sound Card
        <p>Intel Core BX80646I74790K i7-4790K Processor (8M Cache, up to 4.40 GHz)
@@ -78,9 +78,6 @@
        <p>Kingston HyperX FURY 16GB Kit (2x8GB) 1866MHz DDR3 CL10 DIMM - Black (HX318C10FBK2/16)
        <p>EVGA 700 B1, 80+ BRONZE 700W, Power Supply 100-B1-0700-K1
 
-       <div style="clear:both;"></div>
-
-       <img src="images/240px-Tux.png" width="240">
       </div>
 
     </div><!-- /.container -->
