--- a/public/apple.html
+++ b/public/apple.html
@@ -58,23 +58,22 @@
 
       <div class="starter-template">
 
-       <h1>Apple.</h1>
-
-       <p class="lead">Started working on the Apple platform after they adopted the BSD UNIX core for MacOS. I have been learning more about Objective C and Swift.
-
-       <p class="lead">When I was a kid I remember using an Apple ][ and playing Oregon Trail in school and I remember one of my moms friend had a classic mac. 
-
-       <p class="lead">The music program called Reason is one of the Mac applications I still use today, I have written many songs with this software.
-
-       <p class="lead">I was a holdout for the iPad but once I saw what you can do with the device in regards to music I was happy to try it. Now I use the iPad for a sequencer and soft synths.
-
-       <p class="lead">Once I moved to the SF Bay Area I also had the chance to work at Apple on the iCloud team after being a contractor for some time.
-
-       <p class="lead">Currently working on an iOS app for a project I have called M3cho, which is a music platform and plan on doing more music and education software with the platform.
-
-       <div style="clear:both;"></div>
+       <h1>Apple</h1>
 
        <img src="images/Apple-Logo-rainbow.png" width="240">
+
+       <p class="lead">Started working on the Apple platform after they adopted the BSD UNIX core for MacOS and bought my first macbook. I am amazed at the creative software written for the mac platform. I started learning about Objective C after buying my first mac and always learning new things on the platform.
+
+       <p class="lead">The music program called Reason is one of the Mac applications I still use today, I have written many songs with this software. It's nice to have a UNIX terminal and all the creative software available right next to each other.
+
+       <p class="lead">I was a holdout for the iPad but once I saw what you can do with the device in regards to music and with no room for physical synths I was happy to try it. Now I use the iPad for a sequencer and soft synths and drawing.
+
+       <p class="lead">When I was a kid I remember using an Apple ][ and playing Oregon Trail in school and I remember one of my moms friend had a classic mac, but never had my own mac as a child.
+
+       <p class="lead">When I moved to the SF Bay Area I also had the chance to work at Apple on the iCloud team after doing some work as a contractor for the company.
+
+       <p class="lead">Currently working on an iOS app for a project I have called Memory Echo, which is a music platform and plan on doing more music and education software with the platform.
+
       </div>
 
     </div><!-- /.container -->
