--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
        <h2>Programming Projects:</h2>
 
        <p><a href="https://github.com/electronicsleep" class="btn btn-info" target="_blank">Github</a>
-       <p><a href="https://yourideaspace.com" class="btn btn-info" target="_blank">Your Idea Space</a>
+       <p><a href="https://www.yourideaspace.com" class="btn btn-info" target="_blank">Your Idea Space</a>
        <p><a href="https://www.linkedin.com/in/electronicsleep" class="btn btn-info" target="_blank">LinkedIn</a>
 
        <h2>Interests:</h2>
