Linux/Project page

--- a/public/about.html
+++ b/public/about.html
@@ -42,13 +42,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="chris.html">Chris Robertson</a>
+          <a class="navbar-brand" href="about">Chris Robertson</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
-            <li><a href="/linux.html">Linux</a></li>
-            <li><a href="/apple.html">Apple</a></li>
+            <li><a href="/linux">Linux</a></li>
+            <li><a href="/apple">Apple</a></li>
+            <li><a href="/projects">Projects</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -60,7 +61,7 @@
 
         <h1>Chris</h1>
 
-        <a href="http://www.electronicsleep.com" target="_blank">
+        <a href="https://github.com/electronicsleep" target="_blank">
         <img src="images/electronicsleep-trukee.png" width="350">
         </a>
 
