--- a/public/index.html
+++ b/public/index.html
@@ -42,13 +42,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="chris.html">Chris Robertson</a>
+          <a class="navbar-brand" href="about">Chris Robertson</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
-            <li><a href="/linux.html">Linux</a></li>
-            <li><a href="/apple.html">Apple</a></li>
+            <li><a href="/linux">Linux</a></li>
+            <li><a href="/apple">Apple</a></li>
+            <li><a href="/projects">Projects</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
