--- a/public/projects.html
+++ b/public/projects.html
@@ -59,7 +59,7 @@
 
       <div class="starter-template">
 
-       <h1>Blog</h1>
+       <h1>Projects</h1>
 
        <img src="images/240px-Tux.png" width="240">
 
