--- a/public/projects.html
+++ b/public/projects.html
@@ -65,6 +65,8 @@
 
        <p class="lead">In 2016 I built a affordable and powerful Debian/GNU Linux desktop computer for audio recording, games and 3D graphics, thought I would share my hardware info. Everything works well with Linux.
 
+       <p class="lead">Thinkpad 420 External GPU with GDC Beast
+
       </div>
 
     </div><!-- /.container -->
