--- a/public/projects.html
+++ b/public/projects.html
@@ -63,9 +63,48 @@
 
        <img src="images/240px-Tux.png" width="240">
 
-       <p class="lead">In 2016 I built a affordable and powerful Debian/GNU Linux desktop computer for audio recording, games and 3D graphics, thought I would share my hardware info. Everything works well with Linux.
+       <p clear="all"/>
 
-       <p class="lead">Thinkpad 420 External GPU with GDC Beast
+       <a href="#linux-tower">Linux Tower</a>
+       <a href="#thinkpad-t420">Thinkpad t420</a>
+
+       <!-- content -->
+      
+       <!-- tower project -->
+       <a name="linux-tower"></a>
+
+       <p class="lead"><h1>Linux Tower with Nvidia GPU</h1>
+
+       <p class="lead">In 2016 I built a affordable and powerful Debian/GNU Linux desktop computer for audio recording, games and 3D graphics, thought I would share my hardware info. Everything works well with Linux.
+       <p>M-Audio Delta PCI (DELTA 1010LT) Sound Card
+
+       <p>Intel Core BX80646I74790K i7-4790K Processor (8M Cache, up to 4.40 GHz)
+
+       <p>ASUS ATX DDR3 2600 LGA 1150 Motherboards Z97-A/USB 3.1
+
+       <p>Asus GeForce GTX 950 2GB 128-Bit GDDR5 Graphics Cards (STRIX-GTX950-DC2OC-2GD5-GAMING)
+
+       <p>PCI 300Mbps 300M 802.11b/g/n Wireless WiFi Card Adapter for Desktop PC Laptop
+
+       <p>Asus 24x DVD-RW Serial-ATA Internal OEM Optical Drive DRW-24B1ST (Black)
+
+       <p>Corsair Carbide Series 100R Silent Edition Quiet Mid Tower Case
+
+       <p>Kingston HyperX FURY 16GB Kit (2x8GB) 1866MHz DDR3 CL10 DIMM - Black (HX318C10FBK2/16)
+
+       <p>EVGA 700 B1, 80+ BRONZE 700W, Power Supply 100-B1-0700-K1
+
+
+       <!-- thinkpad project -->
+       <a name="thinkpad-t420"></a>
+
+       <p class="lead"><h1>Thinkpad t420 External GPU with GDC Beast</h1>
+
+       <p class="lead">Working on a project with my old thinkpad to install a external GPU.
+
+       <p class="lead">Will be doing some benchmarks to see how this performs after upgrade.
+      
+       <p>Using the GDC Beast with external GPU to give life to this old laptop.
 
       </div>
 
