updates to projects/linux

--- a/public/projects.html
+++ b/public/projects.html
@@ -76,6 +76,9 @@
        <p class="lead"><h1>Linux Tower with Nvidia GPU</h1>
 
        <p class="lead">In 2016 I built a affordable and powerful Debian/GNU Linux desktop computer for audio recording, games and 3D graphics, thought I would share my hardware info. Everything works well with Linux.
+
+       <p class="lead">I use Ardour for audio recording on Linux for my stuido and Blender, Krita and Gimp for artwork. Steam works really well and there are many great Linux games. 
+
        <p>M-Audio Delta PCI (DELTA 1010LT) Sound Card
 
        <p>Intel Core BX80646I74790K i7-4790K Processor (8M Cache, up to 4.40 GHz)
