--- a/public/linux.html
+++ b/public/linux.html
@@ -65,7 +65,7 @@
 
        <p class="lead">I would say my favorite thing about Linux is programming on the platform. Recently I have been learning graphics with SDL2/OpenGL and different graphics under Linux. I graviated towards the platform due to the command line and the vast information about programming and knowledge available.
 
-       <p class="lead">I use Debian mostly and sometimes Ubuntu and CentOS due to the stablity of rpm based distro. I started off with slackware back in the day. Recent programming languages: Python, Java, PHP, Node.js, Perl, Bash, C++.
+       <p class="lead">I use Debian mostly and sometimes Ubuntu and CentOS due to the stablity of rpm based distro but mostly stick with Debian. I started off with slackware back in the day. Recent programming languages: Python, Java, PHP, Node.js, Perl, Bash, C++.
 
        <p class="lead">In 2016 I built a affordable and powerful Debian/GNU Linux desktop computer for audio recording, games and 3D graphics, thought I would share my hardware info. Everything works well with Linux.
 
