updates to projects

--- a/public/projects.html
+++ b/public/projects.html
@@ -79,6 +79,8 @@
 
        <p class="lead">I use Ardour for audio recording on Linux for my stuido and Blender, Krita and Gimp for artwork. Steam works really well and there are many great Linux games. 
 
+       <p class="lead"> The M-Audio Delta PCI card is not new but also is known for a very stable reliable card.
+
        <p>M-Audio Delta PCI (DELTA 1010LT) Sound Card
 
        <p>Intel Core BX80646I74790K i7-4790K Processor (8M Cache, up to 4.40 GHz)
@@ -108,6 +110,8 @@
        <p class="lead">Will be doing some benchmarks to see how this performs after upgrade.
       
        <p>Using the GDC Beast with external GPU to give life to this old laptop.
+
+       <p>Going to be be using the NVIDIA GeForce GT 730
 
       </div>
 
