--- a/public/projects.html
+++ b/public/projects.html
@@ -67,6 +67,7 @@
 
        <a href="#linux-tower">Linux Tower</a>
        <a href="#thinkpad-t420">Thinkpad t420</a>
+       <a href="#memoryecho">memoryecho</a>
 
        <!-- content -->
       
@@ -112,6 +113,13 @@
        <p>Using the GDC Beast with external GPU to give life to this old laptop.
 
        <p>Going to be be using the NVIDIA GeForce GT 730
+
+
+       <!-- memeory echo project -->
+       <a name="memoryecho"></a>
+
+       <p class="lead"><h1>Working on a project called memoryecho.</h1>
+
 
       </div>
 
