--- a/public/projects.html
+++ b/public/projects.html
@@ -67,14 +67,15 @@
 
        <a href="#linux-tower">Linux Tower</a>
        <a href="#thinkpad-t420">Thinkpad t420</a>
-       <a href="#memoryecho">memoryecho</a>
+       <a href="#memoryecho">Memory Echo</a>
 
        <!-- content -->
       
+
        <!-- tower project -->
        <a name="linux-tower"></a>
 
-       <p class="lead"><h1>Linux Tower with Nvidia GPU</h1>
+       <p class="lead"><h1>Linux Tower / Nvidia GPU / M-Audio 1010LT </h1>
 
        <p class="lead">In 2016 I built a affordable and powerful Debian/GNU Linux desktop computer for audio recording, games and 3D graphics, thought I would share my hardware info. Everything works well with Linux.
 
