updates to projects

--- a/public/projects.html
+++ b/public/projects.html
@@ -75,7 +75,7 @@
        <!-- tower project -->
        <a name="linux-tower"></a>
 
-       <p class="lead"><h1>Linux Tower / Nvidia GPU / M-Audio 1010LT </h1>
+       <p class="lead"><h1>Linux Tower / Nvidia GTX 950 GPU / M-Audio 1010LT </h1>
 
        <p class="lead">In 2016 I built a affordable and powerful Debian/GNU Linux desktop computer for audio recording, games and 3D graphics, thought I would share my hardware info. Everything works well with Linux.
 
@@ -121,6 +121,9 @@
 
        <p class="lead"><h1>Working on a project called memoryecho.</h1>
 
+       <p>We colaborate on music and resources for electronic music in the bay.
+
+       <p>Started out as a group of friends.
 
       </div>
 
