--- a/public/projects.html
+++ b/public/projects.html
@@ -73,7 +73,7 @@
       
 
        <!-- tower project -->
-       <a name="linux-tower"></a>
+       <p><a name="linux-tower"></a>
 
        <p class="lead"><h1>Linux Tower / Nvidia GTX 950 GPU / M-Audio 1010LT </h1>
 
@@ -103,7 +103,7 @@
 
 
        <!-- thinkpad project -->
-       <a name="thinkpad-t420"></a>
+       <p><a name="thinkpad-t420"></a>
 
        <p class="lead"><h1>Thinkpad t420 External GPU with GDC Beast</h1>
 
@@ -117,7 +117,7 @@
 
 
        <!-- memeory echo project -->
-       <a name="memoryecho"></a>
+       <p><a name="memoryecho"></a>
 
        <p class="lead"><h1>Working on a project called memoryecho.</h1>
 
