--- a/public/projects.html
+++ b/public/projects.html
@@ -66,8 +66,9 @@
        <p clear="all"/>
 
        <a href="#linux-tower">Linux Tower</a>
-       <a href="#thinkpad-t420">Thinkpad t420</a>
-       <a href="#memoryecho">Memory Echo</a>
+       <br><a href="#thinkpad-t420">Thinkpad t420</a>
+       <br><a href="#memoryecho">Memory Echo</a>
+       <br><a href="#yourideaspace">Your Idea Space</a>
 
        <!-- content -->
       
@@ -116,14 +117,23 @@
        <p>Going to be be using the NVIDIA GeForce GT 730
 
 
-       <!-- memeory echo project -->
+       <!-- Memory Echo project -->
        <p><a name="memoryecho"></a>
 
-       <p class="lead"><h1>Working on a project called memoryecho.</h1>
+       <p class="lead"><h1>Working on a project called Memory Echo.</h1>
 
-       <p>We colaborate on music and resources for electronic music in the bay.
+       <p>Musicians collaboration on music and resources for electronic music in the bay.
 
-       <p>Started out as a group of friends.
+       <p>Started out as a group of friends making music, plan to release a compilation soon.
+
+
+       <!-- Your Idea Space project -->
+       <p><a name="yourideaspace"></a>
+
+       <p class="lead"><h1>Working on a project called Your Idea Space.</h1>
+
+       <p>Started out as a way to build and design websites dynaimcially using my own framework.
+
 
       </div>
 
