--- a/public/linux.html
+++ b/public/linux.html
@@ -65,19 +65,7 @@
 
        <p class="lead">I would say my favorite thing about Linux is programming on the platform. Recently I have been learning graphics with SDL2/OpenGL and different graphics under Linux. I graviated towards the platform due to the command line and the vast information about programming and knowledge available.
 
-       <p class="lead">I use Debian mostly and sometimes Ubuntu and CentOS due to the stablity of rpm based distro but mostly stick with Debian. I started off with slackware back in the day. Recent programming languages: Python, Java, PHP, Node.js, Perl, Bash, C++.
-
-       <p class="lead">In 2016 I built a affordable and powerful Debian/GNU Linux desktop computer for audio recording, games and 3D graphics, thought I would share my hardware info. Everything works well with Linux.
-
-       <p>M-Audio Delta PCI (DELTA 1010LT) Sound Card
-       <p>Intel Core BX80646I74790K i7-4790K Processor (8M Cache, up to 4.40 GHz)
-       <p>ASUS ATX DDR3 2600 LGA 1150 Motherboards Z97-A/USB 3.1
-       <p>Asus GeForce GTX 950 2GB 128-Bit GDDR5 Graphics Cards (STRIX-GTX950-DC2OC-2GD5-GAMING)
-       <p>PCI 300Mbps 300M 802.11b/g/n Wireless WiFi Card Adapter for Desktop PC Laptop
-       <p>Asus 24x DVD-RW Serial-ATA Internal OEM Optical Drive DRW-24B1ST (Black)
-       <p>Corsair Carbide Series 100R Silent Edition Quiet Mid Tower Case
-       <p>Kingston HyperX FURY 16GB Kit (2x8GB) 1866MHz DDR3 CL10 DIMM - Black (HX318C10FBK2/16)
-       <p>EVGA 700 B1, 80+ BRONZE 700W, Power Supply 100-B1-0700-K1
+       <p class="lead">I use Debian mostly and CentOS due to the stablity of rpm based distro but mostly stick with Debian. I started off with slackware back in the day. Recently used programming languages: Python, Java, PHP, Node.js, Perl, Bash, C++.
 
       </div>
 
