--- a/public/projects.html
+++ b/public/projects.html
@@ -132,7 +132,7 @@
 
        <p class="lead"><h1>Working on a project called Your Idea Space.</h1>
 
-       <p>Started out as a way to build and design websites dynaimcially using my own framework.
+       <p>Started out as a way to build and design websites dynamically using by building a framework.
 
 
       </div>
