--- a/public/projects.html
+++ b/public/projects.html
@@ -106,15 +106,13 @@
        <!-- thinkpad project -->
        <p><a name="thinkpad-t420"></a>
 
-       <p class="lead"><h1>Thinkpad t420 External GPU with GDC Beast</h1>
+       <p class="lead"><h1>Thinkpad t420 External GPU with GDC Beast Nvidia GT 730</h1>
 
        <p class="lead">Working on a project with my old thinkpad to install a external GPU.
 
-       <p class="lead">Will be doing some benchmarks to see how this performs after upgrade.
+       <p class="lead">Under Windows 10 and Heaven benchmark got at 706 score with max FPS of 51.4 at 1280x720 FS high resolution
       
-       <p>Using the GDC Beast with external GPU to give life to this old laptop.
-
-       <p>Going to be be using the NVIDIA GeForce GT 730
+       <p>Installed the NVIDIA GeForce GT 730 with no major issues
 
 
        <!-- Memory Echo project -->
